syntax = "proto3";

package org.bigbluebutton.protos;

message ErrorResponse {
  string key = 1;
  string message = 2;
}