syntax = "proto3";

package org.bigbluebutton.protos;

message PasswordSettings {
  string moderator_pw = 1;
  string attendee_pw = 2;
  string learning_dashboard_access_token = 3;
}